# deduction

./: CMakeLists.txt
doc/: system.vsdx  构思.txt
src/projects/: CMakeLists.txt
src/projects/base/: CMakeLists.txt  bigdao.h  chaos.h  intertwine.h  real.h  virtual.h
src/projects/common/: type_struct.h
src/projects/deduction/: CMakeLists.txt  main.cpp
src/projects/getnamer/: CMakeLists.txt
src/projects/getnamer/app/: CMakeLists.txt  getnamer.cpp  getnamer.h
src/projects/getnamer/gui/: CMakeLists.txt
src/projects/test/: CMakeLists.txt  inv.cpp  inv.h  main.cpp
src/projects/util/: CMakeLists.txt  platform_util.cpp  platform_util.h
